scrollbar fix

--- a/frontend/src/app/index.scss
+++ b/frontend/src/app/index.scss
@@ -133,6 +133,7 @@ body {
 
 .fullwidth-table {
   width: 100% !important;
+  padding-right: 13px; //it's for the scrollbar
 }
 
 .full-height {
